--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,8 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap-social.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7352866205911609"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
